--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,9 +13,43 @@ import astro from '../assets/profile_photo_2.jpeg'
 import { getAllPosts, sortMDByDate } from '@/utils'
 
 const languages = ['English', 'Slovak']
-const frontend = ['lorem', 'ipsum', 'lorem', 'ipsum', 'lorem', 'ipsum', 'lorem']
-const backend = ['lorem', 'ipsum', 'lorem', 'ipsum']
-const others = ['lorem', 'ipsum', 'lorem', 'ipsum', 'lorem']
+const programmingLanguages = ['Python', 'Rust', 'Go', 'Julia', 'SQL']
+
+const dataScience = [
+	'Unsupervised ML',
+	'Supervised ML',
+	'Clustering',
+	'LightGBM',
+	'TensorFlow',
+	'PyTorch',
+	'Scikit-Learn',
+	'shap',
+	'PySpark',
+	'Polars',
+	'SQL (Oracle)',
+	'Data Bricks',
+	'AWS',
+	'Azure'
+]
+
+const softwareDevAndDevOps = [
+	'Git',
+	'Gitlab CI/CD',
+	'Docker',
+	'Linux',
+	'REST API',
+	'ReactJS',
+	'Astro',
+	'Nginx',
+	'Bash'
+]
+
+const others = [
+	'LaTeX',
+	'Theoretical Biophysics',
+	'Chemical Physics',
+	'Bioinformatics and Metalloprotein Design'
+]
 
 const MAX_POSTS = 10
 const allPosts = await getAllPosts()
@@ -74,7 +108,9 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS)
 
 		<Section title='About'>
 			<p class='text-muted-foreground'>
-				Proven ability to solve complex problems using innovative and non-standard solutions. Comfortable working independently and excels in systematic approaches. Eager to apply my strong problem-solving skills and passion for coding to a challenging data science role, where I can contribute to strategic decision-making and performance improvement.
+				I love building stuff using data and code. I am a data scientist with a background in
+				theoretical biophysics and chemical physics. I am passionate about data science, machine
+				learning, and software development. 
 			</p>
 		</Section>
 		{
@@ -102,7 +138,8 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS)
 			>
 				<ul class='ml-4 list-disc text-muted-foreground'>
 					<li>
-						The largest project is on automatic segmentation of visits using keyword searches of domains (e.g. Smartphones for Samsung). Working in a newly created team.
+						The largest project is on automatic segmentation of visits using keyword searches of
+						domains (e.g. Smartphones for Samsung). Working in a newly created team.
 
 						<li>Unsupervised ML / clustering / statistics / LLM / embeddings</li>
 						<li>Python / pyspark / Data Bricks / AWS / polars</li>
@@ -119,7 +156,10 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS)
 			>
 				<ul class='ml-4 list-disc text-muted-foreground'>
 					<li>
-						The project was oriented on the short-term prediction of shares in linear TV broadcasts. Newly created small team, design of the model pipeline from scratch. Exploration for target definition. Data cleaning, setup of ETLs on keboola. Design of features and model training. Iterations with end customers.
+						The project was oriented on the short-term prediction of shares in linear TV broadcasts.
+						Newly created small team, design of the model pipeline from scratch. Exploration for
+						target definition. Data cleaning, setup of ETLs on keboola. Design of features and model
+						training. Iterations with end customers.
 
 						<li>Supervised ML / regression / LightGBM</li>
 						<li>Python / polars / Rust / keboola / Machine Learning / Go / Azure</li>
@@ -136,9 +176,18 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS)
 			>
 				<ul class='ml-4 list-disc text-muted-foreground'>
 					<li>
-						Skilled in developing risk models for collections and underwriting through Logistic Regression, LightGBM, and statistical tests. Resurrection of an internal package for scorecard development and improving it significantly. Experienced in speech-to-text processing utilizing TensorFlow and LightGBM for voice recognition projects. Proficient in time series prediction using SARIMAX and Prophet for confidence interval estimation and alarm triggering. Creating a comprehensive internal Spark cookbook. Also, adept at light DevOps and Linux support and serving static React websites using nginx.
+						Skilled in developing risk models for collections and underwriting through Logistic
+						Regression, LightGBM, and statistical tests. Resurrection of an internal package for
+						scorecard development and improving it significantly. Experienced in speech-to-text
+						processing utilizing TensorFlow and LightGBM for voice recognition projects. Proficient
+						in time series prediction using SARIMAX and Prophet for confidence interval estimation
+						and alarm triggering. Creating a comprehensive internal Spark cookbook. Also, adept at
+						light DevOps and Linux support and serving static React websites using nginx.
 
-						<li>Supervised ML / classification / LightGBM / Logistic Regression / TensorFlow / PyTorch / shap / pyspark</li>
+						<li>
+							Supervised ML / classification / LightGBM / Logistic Regression / TensorFlow / PyTorch
+							/ shap / pyspark
+						</li>
 						<li>Python / SQL (Oracle) / polars / Linux / Azure</li>
 					</li>
 				</ul>
@@ -153,7 +202,8 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS)
 			>
 				<ul class='ml-4 list-disc text-muted-foreground'>
 					<li>
-						Using protein fragments from the PDB I developed a method for constructing small metallopro- teins.
+						Using protein fragments from the PDB I developed a method for constructing small
+						metallopro- teins.
 
 						<li>Python / Unsupervised ML / Research in computational chemistry</li>
 					</li>
@@ -172,7 +222,8 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS)
 			>
 				<ul class='ml-4 list-disc text-muted-foreground'>
 					<li>
-						Conducted in-depth research on Redfield equations, resulting in a universally applicable improve- ment technique of a given set of integrodifferential equations. 
+						Conducted in-depth research on Redfield equations, resulting in a universally applicable
+						improve- ment technique of a given set of integrodifferential equations.
 
 						<li>Thesis: https://github.com/detrin/Master-Thesis/blob/main/thesis.pdf</li>
 					</li>
@@ -211,8 +262,9 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS)
 
 		<Section title='Skills'>
 			<SkillLayout title='Languages' skills={languages} />
-			<SkillLayout title='Frontend' skills={frontend} />
-			<SkillLayout title='Backend' skills={backend} />
+			<SkillLayout title='Programming Languages' skills={programmingLanguages} />
+			<SkillLayout title='Data Science' skills={dataScience} />
+			<SkillLayout title='SoftwareDev and DevOps' skills={softwareDevAndDevOps} />
 			<SkillLayout title='Others' skills={others} />
 		</Section>
 	</div>
