--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -162,7 +162,7 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS)
 						training. Iterations with end customers.
 
 						<li>Supervised ML / regression / LightGBM</li>
-						<li>Python / polars / Rust / keboola / Machine Learning / Go / Azure</li>
+						<li>Python / polars / Rust / keboola / Go / Azure</li>
 					</li>
 				</ul>
 			</Card>
