Edited PostPreview to contain links

--- a/src/components/blog/PostPreview.astro
+++ b/src/components/blog/PostPreview.astro
@@ -11,6 +11,8 @@ type Props<Tag extends HTMLTag> = Polymorphic<{ as: Tag }> & {
 
 const { as: Tag = 'div', post, withDesc = false } = Astro.props
 const postDate = post.data.updatedDate ?? post.data.publishDate
+const link = post.data.link ?? `/blog/${post.slug}/`
+console.log(post.data.link, link);
 ---
 
 <li class='flex flex-col gap-2 sm:flex-row sm:gap-x-4 [&_q]:basis-full'>
@@ -19,9 +21,9 @@ const postDate = post.data.updatedDate ?? post.data.publishDate
 	<Tag>
 		{post.data.draft && <span class='text-red-500'>(Draft) </span>}
 		<a
-			data-astro-prefetch
-			href={`/blog/${post.slug}/`}
+			href={link} 
 			class='transition-all hover:text-muted-foreground'
+			{...(post.data.link ? {target: '_blank', rel: 'noopener noreferrer'} : {})} 
 		>
 			{post.data.title}
 		</a>
