--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -51,7 +51,7 @@ const others = [
 	'Bioinformatics and Metalloprotein Design'
 ]
 
-const MAX_POSTS = 10
+const MAX_POSTS = 5
 const allPosts = await getAllPosts()
 const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS)
 ---
@@ -115,7 +115,7 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS)
 		</Section>
 		{
 			allPostsByDate.length > 0 && (
-				<Section title='Posts'>
+				<Section title='Recent Posts'>
 					<ul class='flex flex-col gap-y-2'>
 						{allPostsByDate.map((p) => (
 							<li class='flex flex-col gap-x-2 sm:flex-row'>
