--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -177,7 +177,7 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS)
 				</ul>
 			</Card>
 			<Card
-				heading='Home credit International'
+				heading='Home Credit International'
 				subheading='Data Scientist (full time)'
 				date='October 2021 - March 2024'
 				imagePath='/src/assets/homecredit.png'
