Allowing non profitable bets

--- a/src/components/blog/Surebets.astro
+++ b/src/components/blog/Surebets.astro
@@ -119,13 +119,13 @@
       }
 
       // Check for arbitrage opportunity
-      const arbitragePercentage = (1 / odd1) + (1 / odd2);
-      if (arbitragePercentage >= 1) {
-        errorMessage = 'No arbitrage opportunity exists with these odds.';
-        tableData = [];
-        render();
-        return;
-      }
+      // const arbitragePercentage = (1 / odd1) + (1 / odd2);
+    //   if (arbitragePercentage >= 1) {
+    //     errorMessage = 'No arbitrage opportunity exists with these odds.';
+    //     tableData = [];
+    //     render();
+    //     return;
+    //   }
 
       // Define the range of total bets
       const totalBetRange = [];
